Try to fix a problem that doesn't have a color reversal in dark mode on iOS (using cssbrowserselector.js)

--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -95,7 +95,7 @@ header #logo img {
   width: 100%;
 }
 
-.iphone.safari3 header #logo img {
+.iphone.safari header #logo img {
   filter: invert(100%);
 }
 
